--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -1,7 +1,10 @@
-.container {
+.story-container {
   height: 100vh;
   background-color: #fcd703;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 p {
   font-family: "Roboto", sans-serif;
@@ -9,5 +12,22 @@ p {
   font-size: 14px;
 }
 .our-story {
-  width: 40vw;
+  width: 50%;
+  padding-left: 40px;
+}
+.our-story p {
+  padding-top: 10px;
+}
+.logo-section img {
+  width: 70vw;
+  height: 70vh;
+  object-fit: contain;
+}
+.logo-section {
+  width: 50%;
+  padding-right: 40px;
+}
+.second-container {
+  height: 100vh;
+  background-color: #ed1d24;
 }
